app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.bg-gradient-primary {
  @apply bg-gradient-to-r from-orange-400 via-red-500 to-purple-600;
}

.text-gradient-primary {
  @apply bg-gradient-to-r from-orange-400 via-red-500 to-purple-600;
  @apply bg-clip-text text-transparent;
}

.tag-card {
  @apply p-1 inline-flex items-center bg-slate-100 rounded-lg;
  @apply text-xs;
}

.tag-inline {
  @apply p-1 inline-flex items-center bg-slate-100 rounded-lg;
  @apply text-base font-semibold drop-shadow-sm;
}

.header-sticky {
  @apply fixed top-0 w-full;
}

